--- a/src/libcharon/Makefile.am
+++ b/src/libcharon/Makefile.am
@@ -184,6 +184,15 @@ if USE_ME
     sa/ikev2/tasks/ike_me.c sa/ikev2/tasks/ike_me.h
 endif
 
+if STATIC_PLUGIN_CONSTRUCTORS
+BUILT_SOURCES = $(srcdir)/plugin_constructors.c
+CLEANFILES = $(srcdir)/plugin_constructors.c
+
+$(srcdir)/plugin_constructors.c: $(top_builddir)/src/libstrongswan/plugins/plugin_constructors_builder
+		$(AM_V_GEN) \
+		$(top_builddir)/src/libstrongswan/plugins/plugin_constructors_builder ${c_plugins} > $@
+endif
+
 # build optional plugins
 ########################
 
